kubernetes-resources/backend/back-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment
  namespace: back-ns
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: back-pod
      labels:
        app: backend
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: Equal
                      values:
                        - backend
                topologyKey: topology.kubernetes.io/zone
              weight: 100
      containers:
        - name: back-container
          image: bstar999/back-image-mini
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
