kubernetes-resources/backend/back-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: back-service
  namespace: back-ns
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 8080
